scrollbar fix (?)

--- a/kattieAnn/sass/bases.scss
+++ b/kattieAnn/sass/bases.scss
@@ -53,11 +53,43 @@ ul {
 
 .cfull {
 	min-height: 100%;
-	height: 100%;
+	height: 100%;	
+}
+///////////////////////
 
-	&::-webkit-scrollbar,	&:-webkit-scrollbar {
-    -webkit-appearance: none;
-	  -moz-appearance:    none;
-	  appearance:         none;
+html {
+	@include break(sm){
+		overflow-x: hidden;
 	}
+}
+
+
+.cfull::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  -webkit-appearance: none;
+  -moz-appearance:    none;
+  appearance:         none;
+}
+
+.cfull::-webkit-scrollbar:vertical,
+body::-webkit-scrollbar:vertical {
+    width: 0;
+}
+
+.cfull::-webkit-scrollbar:horizontal,
+body::-webkit-scrollbar:horizontal {
+    height: 0;
+}
+
+.cfull::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+    border-radius: 0;
+    border: 0 solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.cfull::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+    background-color: #fff; 
+    border-radius: 0; 
 }
